--- a/Languages/Markup_Language/html/CSS.adoc
+++ b/Languages/Markup_Language/html/CSS.adoc
@@ -4,9 +4,63 @@
 == CSS
 To style the documents
 
-=== Attributes
+=== How CSS Works?
+```mermaid
+sequenceDiagram
+  participant n as otherNode
+  participant b as browser
+
+  n ->> b: Recieve HTML
+  note over b: 1. Convert HTML to DOM <br>2. Fetch resources in HTML(images,links,videos)<br>3. Browser parses CSS<br>4. Render tree laid out in structure<br>5. Page is displayed visually
+```
+
+=== Methods of applying CSS to a document
+* 1. External stylesheet: External css file styling all HTML documents. Reference using HTML <link> element.
+* 2. Internal stylesheet: An internal stylesheet resides within an HTML document. To create an internal stylesheet, you place CSS inside a <style> element contained inside the HTML <head>.
+```css
+<!doctype html>
+<html lang="en-GB">
+  <head>
+    <meta charset="utf-8" />
+    <title>My CSS experiment</title>
+    <style>
+      h1 {
+        color: blue;
+        background-color: yellow;
+        border: 1px solid black;
+      }
+
+      p {
+        color: red;
+      }
+    </style>
+  </head>
+<body>
+</body>
+</html>
+```
+* 3. Inline styles(Avoid this): CSS declarations that affect a single HTML element, contained within a style attribute
+```css
+    <h1 style="color: blue;background-color: yellow;border: 1px solid black;">
+      Hello World!
+    </h1>
+```
+
+=== Attributes/Properties
 |===
 
+|@rules (at-rules)|provide instruction for what CSS should perform or how it should behave
+``
+body {
+  background-color: pink;
+}
+
+@media (min-width: 30em) {  //defines a blue background if the browser viewport is wider than 30em.
+  body {
+    background-color: blue;
+  }
+}
+``
 |<a>|styles unvisited links pink and visited links green,  link looks when the user hovers over it,
 ``
 a:link {
@@ -17,6 +71,22 @@ a:visited {
 }
 a:hover {
   text-decoration: none;
+}
+``
+|calc()|do simple math within CSS:
+``
+//HTML
+<div class="outer"><div class="box">The inner box is 90% - 30px.</div></div>
+//CSS
+.outer {
+  border: 5px solid black;
+}
+
+.box {
+  padding: 10px;
+  width: calc(90% - 30px);
+  background-color: rebeccapurple;
+  color: white;
 }
 ``
 |class|To select a subset of the elements without changing the others, you can add a class to your HTML element
@@ -37,6 +107,44 @@ a:hover {
 ``
 li {
   list-style-type: none;
+}
+``
+|selectors|A CSS selector is the first part of a CSS Rule. It is a pattern of elements and other terms that tell the browser which HTML elements should be selected to have the CSS property values inside the rule applied to them.
+``
+h1
+a:link
+.manythings
+#onething
+*
+.box p
+.box p:first-child
+h1, h2, .intro
+``
+|shorthand|font, background, padding, border, and margin are called shorthand properties. This is because shorthand properties set several values in a single line.
+``
+/* In 4-value shorthands like padding and margin, the values are applied
+   in the order top, right, bottom, left (clockwise from the top). There are also other
+   shorthand types, for example 2-value shorthands, which set padding/margin
+   for top/bottom, then left/right */
+padding: 10px 15px 15px 5px;
+
+//equivalent to these four lines of code:
+padding-top: 10px;
+padding-right: 15px;
+padding-bottom: 15px;
+padding-left: 5px;
+``
+|transform()|various values for transform, such as rotate()
+``
+//HTML
+<div class="box"></div>
+//CSS
+.box {
+  margin: 30px;
+  width: 100px;
+  height: 100px;
+  background-color: rebeccapurple;
+  transform: rotate(0.8turn);
 }
 ``
 |===
